Visibility fixed

--- a/public/assets/css/BlogDetail.scss
+++ b/public/assets/css/BlogDetail.scss
@@ -52,7 +52,7 @@
       margin-bottom: 20px;
       line-height: 40px;
       margin-top: 50px;
-      width: 210%; /* Responsive description width */
+      width: 200%; /* Responsive description width */
 
       @media (max-width: 400px) {
         max-width: 100%; /* Ensure it doesn't overflow */
